pipeline/dev/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-challenge
  labels:
    app: tech-challenge
spec:
  template:
    metadata:
      name: tech-challenge
      labels:
        app: tech-challenge
    spec:
      containers:
        - name: tech-challenge-api
          image: 1811183/tech-challenge:1.0.2
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 40
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
  replicas: 2
  selector:
    matchLabels:
      app: tech-challenge
