pipeline/dev/application/service-eks.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-load-balancer
spec:
  ports:
    - port: 80
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: tech-challenge-api
