pipeline/dev/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: tech-challenge
